--- a/index.html
+++ b/index.html
@@ -327,81 +327,133 @@
     <div class="progress" aria-hidden="true"><span></span></div>
   </nav>
 
-  <!-- HERO -->
-  <header id="hero" class="section hero" aria-label="Introduction">
-    <div class="hero__pin">
-      <!-- Scène SVG (ciel/route/soleil/voiture) -->
-      <svg class="scene" viewBox="0 0 1440 810" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Montagnes stylisées, route et soleil">
-        <defs>
-          <linearGradient id="grad-sky" x1="0" y1="0" x2="0" y2="1">
-            <stop offset="0%" stop-color="#1E1E1E"/><stop offset="100%" stop-color="#111217"/>
-          </linearGradient>
-          <linearGradient id="grad-road" x1="0" y1="0" x2="0" y2="1">
-            <stop offset="0%" stop-color="#2b2d3a"/><stop offset="100%" stop-color="#1b1d27"/>
-          </linearGradient>
-        </defs>
+<!-- HERO -->
+<header id="hero" class="section hero" aria-label="Introduction">
+  <div class="hero__pin">
 
-        <rect x="0" y="0" width="1440" height="810" fill="url(#grad-sky)"/>
+    <!-- Scène SVG : soleil + route + voiture UNIQUEMENT -->
+    <svg
+      class="scene"
+      viewBox="0 0 1440 810"
+      preserveAspectRatio="xMidYMid meet"
+      role="img"
+      aria-label="Route sinueuse et soleil souriant"
+    >
+      <defs>
+        <!-- Dégradé uniquement pour la route -->
+        <linearGradient id="grad-road" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0" stop-color="#2b2d3a" />
+          <stop offset="1" stop-color="#1b1d27" />
+        </linearGradient>
+      </defs>
 
-        <!-- Trajectoire du soleil -->
-        <path id="sunPath" d="M 220 110 C 520 40 900 70 1240 190" fill="none" stroke="transparent" />
+      <!-- Trajectoire du soleil (pour GSAP) -->
+      <path
+        id="sunPath"
+        d="M 220 110 C 520 40 900 70 1240 190"
+        fill="none"
+        stroke="transparent"
+      ></path>
 
-        <!-- Soleil -->
-        <g id="sun">
-          <g id="sunRays" stroke="#F7C600" stroke-width="10" stroke-linecap="round">
-            <line x1="0" y1="-80" x2="0" y2="-120"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(30)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(60)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(90)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(120)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(150)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(180)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(210)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(240)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(270)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(300)"/>
-            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(330)"/>
-          </g>
-          <circle r="60" fill="#F7C600"></circle>
-          <circle class="eyeL" cx="-20" cy="-10" r="6" fill="#111"/>
-          <circle class="eyeR" cx="20" cy="-10" r="6" fill="#111"/>
-          <path class="smile" d="M -25 20 Q 0 40 25 20" fill="none" stroke="#111" stroke-width="6" stroke-linecap="round"/>
+      <!-- Soleil -->
+      <g id="sun">
+        <g id="sunRays" stroke="#F7C600" stroke-width="10" stroke-linecap="round">
+          <line x1="0" y1="-80" x2="0" y2="-120" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(30)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(60)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(90)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(120)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(150)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(180)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(210)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(240)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(270)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(300)" />
+          <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(330)" />
         </g>
+        <circle r="60" fill="#F7C600"></circle>
+        <circle class="eyeL" cx="-20" cy="-10" r="6" fill="#111"></circle>
+        <circle class="eyeR" cx="20" cy="-10" r="6" fill="#111"></circle>
+        <path
+          class="smile"
+          d="M -25 20 Q 0 40 25 20"
+          fill="none"
+          stroke="#111"
+          stroke-width="6"
+          stroke-linecap="round"
+        ></path>
+      </g>
 
-        <!-- Route HERO -->
-        <g id="road">
-          <path id="roadBg" d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660"
-                fill="none" stroke="url(#grad-road)" stroke-width="120" stroke-linecap="round" opacity="0.93"/>
-          <path id="roadDash" d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660"
-                fill="none" stroke="#F7F7F7" stroke-width="8" stroke-linecap="round" stroke-dasharray="36 28" opacity="0.85"/>
-          <path id="roadPathHero" d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660" fill="none" />
-        </g>
+      <!-- Route HERO -->
+      <g id="road">
+        <path
+          id="roadBg"
+          d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660"
+          fill="none"
+          stroke="url(#grad-road)"
+          stroke-width="120"
+          stroke-linecap="round"
+          opacity="0.93"
+        ></path>
+        <path
+          id="roadDash"
+          d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660"
+          fill="none"
+          stroke="#F7F7F7"
+          stroke-width="8"
+          stroke-linecap="round"
+          stroke-dasharray="36 28"
+          opacity="0.85"
+        ></path>
+        <!-- Chemin pour l’animation de la voiture -->
+        <path
+          id="roadPathHero"
+          d="M-50,720 C200,660 300,700 420,680 C550,660 620,600 720,610 C850,620 930,700 1040,690 C1150,680 1300,640 1500,660"
+          fill="none"
+        ></path>
+      </g>
 
-        <!-- 🚗 Voiture -->
-        <g id="carHero" transform="translate(-100,720) scale(1)">
-          <rect x="-40" y="-20" rx="10" ry="10" width="90" height="38" fill="#FF5E8E" stroke="#fff" stroke-width="3"/>
-          <rect x="-25" y="-36" rx="8" ry="8" width="60" height="22" fill="#ffd6e2" stroke="#fff" stroke-width="3"/>
-          <circle cx="-20" cy="20" r="12" fill="#111" stroke="#eee" stroke-width="3"/>
-          <circle cx="35"  cy="20" r="12" fill="#111" stroke="#eee" stroke-width="3"/>
-          <rect x="40" y="-12" width="12" height="10" fill="#F7C600" />
-        </g>
-      </svg>
+      <!-- Voiture -->
+      <g id="carHero" transform="translate(-100,720) scale(1)">
+        <rect x="-40" y="-20" rx="10" ry="10" width="90" height="38" fill="#FF5E8E" stroke="#fff" stroke-width="3"></rect>
+        <rect x="-25" y="-36" rx="8" ry="8" width="60" height="22" fill="#ffd6e2" stroke="#fff" stroke-width="3"></rect>
+        <circle cx="-20" cy="20" r="12" fill="#111" stroke="#eee" stroke-width="3"></circle>
+        <circle cx="35" cy="20" r="12" fill="#111" stroke="#eee" stroke-width="3"></circle>
+        <rect x="40" y="-12" width="12" height="10" fill="#F7C600"></rect>
+      </g>
+    </svg>
 
-      <div class="hero__content container">
-        <div class="hero__badge" data-magnet>Informatique Cerdagne</div>
-        <h1>
-          Le service informatique à domicile <span class="accent">avec le sourire</span>
-        </h1>
-        <p class="hero__sub">Amoureux de la relation client, c'est un grand plaisir de vous accompagner !</p>
-        <p class="hero__sub">Ma mission : vous faciliter la vie.</p>
-        <div class="cta">
-          <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Demander un devis</a>
-          <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>Voir les prestations</a>
-        </div>
-        <p class="hero__credits small">Interventions auprès des Professionnels & Particuliers</p>
+    <!-- Contenu texte du Hero -->
+    <div class="hero__content container">
+      <div class="hero__badge" data-magnet>Informatique Cerdagne</div>
+
+      <h1>
+        Le service informatique à domicile <span class="accent">avec le sourire</span>
+      </h1>
+
+      <p class="hero__sub">
+        Amoureux de la relation client, c'est un grand plaisir de vous accompagner !
+      </p>
+      <p class="hero__sub">
+        Ma mission : vous faciliter la vie.
+      </p>
+
+      <div class="cta">
+        <a data-scroll-link href="#contact" class="btn btn-primary btn-magnet" data-magnet>
+          Demander un devis
+        </a>
+        <a data-scroll-link href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>
+          Voir les prestations
+        </a>
       </div>
+
+      <p class="hero__credits small">
+        Interventions auprès des Professionnels &amp; Particuliers
+      </p>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- DÉMARCHE -->
   <section id="demarche" class="section demarche" aria-labelledby="h-demarche">
